lab3-4/PostService/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/posts
            pathType: "Prefix"
            backend:
              service:
                name: post-service-service
                port:
                  number: 80
